--- a/index.html
+++ b/index.html
@@ -53,8 +53,17 @@
     </ul>
 </div>
 <!-- Конец -->
-<!-- Начало 3-го задания -->
-
+<!-- Начало 4-го задания -->
+<div class="task4">
+    <h2>Задание 4</h2>
+    <ul class="main4">
+        <li class="main-li4">Main 1</li>
+        <li class="main-li4">Main 2</li>
+        <li class="main-li4">Main 3</li>
+        <li class="main-li4">Main 4</li>
+        <li class="main-li4">Main 5</li>
+    </ul>
+</div>
 <!-- Конец -->
 </body>
 </html>
