--- a/Homevork/index.html
+++ b/Homevork/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body class="fon">
-    <div class="wrapper">
+    <div class="wrapper" >
 
             <div > <!--  class="clearfix" -->           
 
@@ -30,7 +30,7 @@
             </div>
             
             <div class="block-right">
-            <h2 class="paragraph-one">Our Principles</h2>
+            <h2 class="paragraph-one mleft-one">Our Principles</h2>
                 <ul>
                     <li class="list">Pellentesque imperdiet. neque. 
                     </li>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="block-right2">
-                <h2 class="paragraph-two">testimonial</h2>
+                <h2 class="paragraph-two mleft">testimonial</h2>
                 <p class="weight"> <span class="before"></span> Nnatoque penatibus tkamet magnis dis parturient montes, nascetur ridiculus mustro lito. Quisque vehicula eu nisleweri teget convallis. Vivamus sit amet fringilla nibt fringilla. <span class="after"></span>
                 </p>
                 <p class="name weight">Mark Johnson</p>
